--- a/.config
+++ b/.config
@@ -18,7 +18,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # Applications
 CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome is not set
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
@@ -138,6 +138,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_usbutils=y
 
 # 3G/4G Drivers & Utilities
 CONFIG_PACKAGE_comgt-ncm=y
