--- a/.config
+++ b/.config
@@ -166,7 +166,7 @@ CONFIG_PACKAGE_smartdns=y
 
 # Wireless Drivers
 CONFIG_PACKAGE_kmod-cfg80211=y
-CONFIG_PACKAGE_kmod-rtl8812au-ac=y
+# CONFIG_PACKAGE_kmod-rtl8812au-ac is not set
 
 # Wireless
 CONFIG_PACKAGE_kmod-ipt-nat=y
