--- a/.config
+++ b/.config
@@ -3,7 +3,10 @@
 CONFIG_MODULES=y
 CONFIG_TARGET_rockchip=y
 CONFIG_TARGET_rockchip_armv8=y
-CONFIG_TARGET_rockchip_armv8_DEVICE_fastrhino_r66s=y
+CONFIG_TARGET_rockchip_armv8_DEVICE_lunzn_fastrhino-r66s=y
+CONFIG_TARGET_PROFILE="DEVICE_lunzn_fastrhino-r66s"
+CONFIG_PACKAGE_u-boot-fastrhino-r66s-rk3568=y
+CONFIG_PACKAGE_trusted-firmware-a-rk3568=y
 
 # Root filesystem images
 CONFIG_TARGET_ROOTFS_EXT4FS=y
@@ -166,7 +169,7 @@ CONFIG_PACKAGE_smartdns=y
 
 # Wireless Drivers
 CONFIG_PACKAGE_kmod-cfg80211=y
-# CONFIG_PACKAGE_kmod-rtl8812au-ac is not set
+CONFIG_PACKAGE_kmod-rtl8812au-ac=y
 
 # Wireless
 CONFIG_PACKAGE_kmod-ipt-nat=y
